--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/b0cb9ad87f.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body class="bcg-img">
     <!-- main -->
@@ -25,7 +25,7 @@
                 <a href="#home">Pizzeriada</></a>
             </div>
           <ul class="nav-mobile__anchors">
-            <li><a href="#home" >strona główna</a></li>
+            <li><a href="#home" class="nav-mobile__item">strona główna</a></li>
             <li><a href="#about" class="nav-mobile__item">o nas</a></li>
             <li><a href="#menu" class="nav-mobile__item">Menu</a></li>
             <li><a href="#contact" class="nav-mobile__item">Kontakt</a></li>
