--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
         </section> -->
 
-      <!-- <section class="about wrapper" id="about">
+      <section class="about wrapper" id="about">
             <div class="about__text-container">
                 <div class="about__title">
                     <em><p class="about__top-text">Dowiedz się więcej</p></em>
@@ -312,7 +312,7 @@
             <div class="about__photo">
                 <img src="./img/pizza_circle.png" alt="pizza okrągła" />
             </div>
-        </section> -->
+        </section>
 
       <!-- <section class="short-info wrapper">
             <div class="info">
