beginning of work on opinion section(basic html[not all], css)

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </header>
 
         <section class="slider wrapper"> 
-            <div class="slider__title">
+            <div class="slider__heading">
                 <h2>Nasze pizze</h2>
             </div>
             <div class="slider__container ">
@@ -90,7 +90,6 @@
         <section class="opinion wrapper">
             <h2 class="opinion__heading">Opinie naszych klientów</h2>     
             <div class="opinion__clients-list">
-                
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
                         <i class="fa-solid fa-star star"></i>
@@ -299,6 +298,12 @@
                     </div>
                 </div>
             </div>
+
+            <h3>Podziel się z nami swoją opinią!</h3>
+            <div class="opinion__form">
+                soon!
+            </div>
+
         </section>
 
         <!-- <section class="about wrapper" id="about">
