--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             <div class="opinion__clients-list">
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Przepyszna pizza i przemiły uśmiechnęty kurier! :)</p>
@@ -115,11 +115,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-regular fa-star-half-stroke star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Kolejny raz pyszna pizza, która dojechała gorąca przed wyznaczonym terminem.
@@ -138,11 +138,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Jak zawsze - pizza ciepła, dobrze wypieczona, przywieziona w wyznaczonej godzinie. Polecam
@@ -160,11 +160,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Wszystko super!</p>
@@ -181,9 +181,9 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Ok</p>
@@ -200,10 +200,9 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-regular fa-star-half-stroke star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Długie oczekiwanie na zamówienie.</p>
@@ -221,11 +220,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Smaczna pizza i bardzo miła obsługa :)</p>
@@ -242,11 +241,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Jak zawsze szybko i smacznie</p>
@@ -263,11 +262,11 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Dostawa bardzo sprawna, szkoda że wybór sosów ograniczono do trzech i sos serowe chili trzeba
@@ -285,11 +284,10 @@
 
                 <div class="opinion__client-rating">
                     <div class="opinion__stars">
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-regular fa-star-half-stroke star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
                     </div>
                     <div class="opinion__testimonials">
                         <p>Polecam</p>
@@ -313,11 +311,11 @@
                 <div class="form__input-container form__stars">
                     <label for="stars">Ocena</label>
                     <div>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
-                        <i class="fa-solid fa-star star"></i>
+                        <i class="fa-solid fa-star star1"></i>
+                        <i class="fa-solid fa-star star2"></i>
+                        <i class="fa-solid fa-star star3"></i>
+                        <i class="fa-solid fa-star star4"></i>
+                        <i class="fa-solid fa-star star5"></i>
                     </div>
 
                 </div>
