--- a/index.html
+++ b/index.html
@@ -301,8 +301,6 @@
                         <p class="author">~ Zespół Pizzeriada</p>
                     </div>
                 </div>
-
-
             </div>
 
             <h3>Podziel się z nami swoją opinią!</h3>
@@ -317,9 +315,7 @@
                         <i class="fa-solid fa-star star4"></i>
                         <i class="fa-solid fa-star star5"></i>
                     </div>
-
                 </div>
-
                 <div class="form__input-container form__name">
                     <label for="name">Twoje imię</label>
                     <input id="name" type="text">
@@ -329,20 +325,22 @@
                     <label for="testimonials">Opinia</label>
                     <textarea id="testimonials" type="text"></textarea>
                 </div>
-
                 <div class="form__input-container">
                     <a class="form__input-container form__btn">Dodaj!</a>
                 </div>
             </form>
         </section>
 
-        <!-- <section class="about wrapper" id="about">
-            <div class="about__text-container">
-                <div class="about__title">
-                    <em><p class="about__top-text">Dowiedz się więcej</p></em>
-                    <p class="about__middle-text">o naszej restauracji</p>
-                </div>
-                <div class="about__description">
+        <section class="about wrapper" id="about">
+
+            <div class="about__heading">
+                <em><p class="about__top-text">Dowiedz się więcej</p></em>
+                <p class="about__middle-text">o naszej restauracji</p>
+            </div>
+
+
+            <div class="about__description">
+                <div class="about__text-container">
                     <p>
                         Pizzeriada to niepowtarzalne miejsce, w którym dostaniecie
                         najlepszą pizzę i nie tylko.
@@ -357,15 +355,21 @@
                         cały czas poszerzają swoje umiejętności kulinarne i codziennie
                         przygotowują dla Was pyszne nowości.
                     </p>
+                    <div class="about__read-more-btn">
+                        <a href="#members" class="btn">Czytaj dalej</a>
+                    </div>
                 </div>
-                <div class="about__read-more-btn">
-                    <a href="#members" class="btn">Czytaj dalej</a>
+
+                <div class="about__photo">
+                    <img src="./img/pizza_circle.png" alt="pizza okrągła" />
                 </div>
+
             </div>
-            <div class="about__photo">
-                <img src="./img/pizza_circle.png" alt="pizza okrągła" />
-            </div>
-        </section> -->
+
+
+
+            
+        </section>
 
         <!-- <section class="short-info wrapper">
             <div class="info">
