minor adjustments of about section

--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
         <section class="about wrapper" id="about">
 
             <div class="about__heading">
-                <em><p class="about__top-text">Dowiedz się więcej</p></em>
-                <p class="about__middle-text">o naszej restauracji</p>
+                <h2 class="about__top-text">Dowiedz się więcej</em> o naszej restauracji</h2>
+                <h2 class="about__middle-text"></h2>
             </div>
 
 
