info section done[HTML,CSS]

--- a/index.html
+++ b/index.html
@@ -359,66 +359,60 @@
                         <a href="#members" class="btn">Czytaj dalej</a>
                     </div>
                 </div>
-
                 <div class="about__photo">
                     <img src="./img/pizza_circle.png" alt="pizza okrągła" />
                 </div>
-
             </div>
-
-
-
-            
         </section>
 
-        <!-- <section class="short-info wrapper">
-            <div class="info">
+        <section class="info wrapper">
+            <div class="info__short">
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-location-dot"></i>
                     <div class="info__text">
-                        <p>Kamienna 31a</p>
-                        <p>10-200 Dąbrowa Górnicza</p>
-                        <p>Czujna 17</p>
-                        <p>20-100 Sosnowiec</p>
+                        <p>Kamienna 31a
+                        10-200 Dąbrowa Górnicza
+                        Czujna 17
+                        20-100 Sosnowiec</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-utensils"></i>
                     <div class="info__text">
-                        <p>Mapę oraz koszt dowozów</p>
-                        <p>można znaleźć w naszym</p>
-                        <p>systemie online</p>
+                        <p>Mapę oraz koszt dowozów
+                        można znaleźć w naszym
+                        systemie online</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-mobile-screen-button"></i>
                     <div class="info__text">
-                        <p>DĄBROWA GÓRNICZA</p>
-                        <p>tel: 111 222 333</p>
-                        <p>SOSNOWIEC</p>
-                        <p>tel: 333 222 111</p>
+                        <p>DĄBROWA GÓRNICZA
+                        tel: 111 222 333
+                        SOSNOWIEC
+                        tel: 333 222 111</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-clock"></i>
                     <div class="info__text">
-                        <p>Pon - czw: 10:00 - 23:00</p>
-                        <p>Pt - Sb: 11:00 - 24:00</p>
-                        <p>Nd: 12:00 - 22:00</p>
+                        <p>Pon - czw: 10:00 - 23:00
+                        Pt - Sb: 11:00 - 24:00
+                        Nd: 12:00 - 22:00</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-cake-candles"></i>
                     <div class="info__text">
-                        <p>Zajmujemy się również</p>
-                        <p>organizacją imprez</p>
-                        <p>okolicznościowych tj. komunie</p>
-                        <p>chrzciny, urodziny w</p>
-                        <p>klimatyzowanej sali.</p>
+                        <p>Zajmujemy się również
+                        organizacją imprez
+                        okolicznościowych tj. komunie
+                        chrzciny, urodziny w
+                        klimatyzowanej sali.</p>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- <section class="members wrapper">
 
