members section done[HTML,CSS]

--- a/index.html
+++ b/index.html
@@ -371,89 +371,93 @@
                     <i class="info__icon fa-solid fa-location-dot"></i>
                     <div class="info__text">
                         <p>Kamienna 31a
-                        10-200 Dąbrowa Górnicza
-                        Czujna 17
-                        20-100 Sosnowiec</p>
+                            10-200 Dąbrowa Górnicza
+                            Czujna 17
+                            20-100 Sosnowiec</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-utensils"></i>
                     <div class="info__text">
                         <p>Mapę oraz koszt dowozów
-                        można znaleźć w naszym
-                        systemie online</p>
+                            można znaleźć w naszym
+                            systemie online</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-mobile-screen-button"></i>
                     <div class="info__text">
                         <p>DĄBROWA GÓRNICZA
-                        tel: 111 222 333
-                        SOSNOWIEC
-                        tel: 333 222 111</p>
+                            tel: 111 222 333
+                            SOSNOWIEC
+                            tel: 333 222 111</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-clock"></i>
                     <div class="info__text">
                         <p>Pon - czw: 10:00 - 23:00
-                        Pt - Sb: 11:00 - 24:00
-                        Nd: 12:00 - 22:00</p>
+                            Pt - Sb: 11:00 - 24:00
+                            Nd: 12:00 - 22:00</p>
                     </div>
                 </div>
                 <div class="info__element">
                     <i class="info__icon fa-solid fa-cake-candles"></i>
                     <div class="info__text">
                         <p>Zajmujemy się również
-                        organizacją imprez
-                        okolicznościowych tj. komunie
-                        chrzciny, urodziny w
-                        klimatyzowanej sali.</p>
+                            organizacją imprez
+                            okolicznościowych tj. komunie
+                            chrzciny, urodziny w
+                            klimatyzowanej sali.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- <section class="members wrapper">
 
-                <h2 class="members__heading" id="members">Nasi pracownicy</h2>
 
-                <div class="members__member">
-                    <img src="./img/pizza-guy.jpg" alt="szef kuchnii Roman" />
-                    <p>Szef kuchnii Roman</p>
-                    <p>
-                        Pan Roman jest szefem kuchnii naszej Pizzeriady. Zajmuje się wszelkimi sprawami związanymi z Pizzerią.
-                    </p>
-                </div>
 
-                <div class="members__member">
-                    <img src="./img/pizza-helper.jpg" alt="" />
-                    <p>Pizzerman Kamil</p>
-                    <p>
-                        Kamil jest kucharzem, który zajmuje się przygotowaniem pizzy. Na każdym etapie tego procesu.
-                    </p>
+        <section class="members wrapper">
+            <h2 class="members__heading" id="members">Nasi pracownicy</h2>
 
-                </div>
+            <div class="members__member">
+                <img src="./img/pizza-guy.jpg" alt="szef kuchnii Roman" />
+                <p>Szef kuchnii Roman</p>
+                <p>
+                    Pan Roman jest szefem kuchnii naszej Pizzeriady. Zajmuje się wszelkimi sprawami związanymi z
+                    Pizzerią.
+                </p>
+            </div>
 
-                <div class="members__member">
-                    <img src="./img/waitress.jpg" alt=""/>
-                    <p>Kelnerka Ania</p>
-                    <p>
-                        Ania jest uprzejmą i fachową kelnerką, która tak samo jak reszta zespołu dba o lokal i dobro klientów.
-                    </p>
-                </div>
-
-                <div class="members__member">
-                    <img src="./img/delivery-guy.jpg" alt="" />
-                    <p>Dostawca Maciej</p>
-                    <p>
-                        Maciej jest naszym dostawcą, który nigdy się nie spóżnia z zamówieniami.
-                    </p>
-                </div>
+            <div class="members__member">
+                <img src="./img/pizza-helper.jpg" alt="" />
+                <p>Pizzerman Kamil</p>
+                <p>
+                    Kamil jest kucharzem, który zajmuje się przygotowaniem pizzy. Na każdym etapie tego procesu.
+                </p>
 
             </div>
-            
-        </section> -->
+
+            <div class="members__member">
+                <img src="./img/waitress.jpg" alt="" />
+                <p>Kelnerka Ania</p>
+                <p>
+                    Ania jest uprzejmą i fachową kelnerką, która tak samo jak reszta zespołu dba o lokal i dobro
+                    klientów.
+                </p>
+            </div>
+
+            <div class="members__member">
+                <img src="./img/delivery-guy.jpg" alt="" />
+                <p>Dostawca Maciej</p>
+                <p>
+                    Maciej jest naszym dostawcą, który nigdy się nie spóżnia z zamówieniami.
+                </p>
+            </div>
+
+            </div>
+
+        </section>
 
         <!-- <section class="menu-section" id="menu">
             <div class="menu-container wrapper">
